--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,157 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
+
+    <include layout="@layout/music_list" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="83dp"
+        android:background="#BDBDBD"
         android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/listView1"
+        <ImageView
+            android:layout_height="70dp"
+            android:layout_width="70dp"
+            android:id="@+id/imag"
+            />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/btn_test"
-            android:layout_marginTop="20dp"
-            android:entries="@array/major_array" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/small_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="歌曲"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="17dp" />
+
+            <TextView
+                android:id="@+id/small_singer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="歌手"
+                android:textSize="15dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/time_begin"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#000000"
+                    android:text="00:00"/>
+
+                <SeekBar
+                    android:id="@+id/mediaSeekBar"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginTop="5px" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/time_end"
+                    android:layout_marginRight="20dp"
+                    android:textColor="#000000"
+                    android:text="00:00" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="bottom"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <LinearLayout
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/music_current_time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/playButton"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="00:00"
-                android:textStyle="bold"
-                tools:autoText="false" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4" />
-
-            <TextView
-                android:id="@+id/music_total_time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="5dp"
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff"
+                android:layout_marginRight="15dp"
+                android:layout_height="30dp"
+                android:background="#512DA8"
+                android:text="play" />
+            <Button
+                android:id="@+id/pauseButton"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="00:00"
-                android:textStyle="bold" />
+                android:textColor="#ffffff"
+                android:background="#512DA8"
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:text="stop" />
+
+            <Button
+                android:id="@+id/stopButton"
+                android:layout_weight="1"
+                android:background="#512DA8"
+                android:layout_width="5dp"
+                android:textColor="#ffffff"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="25dp"
+                android:layout_height="30dp"
+                android:text="replay" />
         </LinearLayout>
-
         <LinearLayout
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
 
-            <SeekBar
-                android:id="@+id/music_seekbar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/previous"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            <Button
+                android:id="@+id/pre"
                 android:layout_weight="1"
-                android:background="#00000000"
-                android:src="@android:drawable/ic_media_previous" />
-
-            <ImageButton
-                android:id="@+id/btn_pause"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="5dp"
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff"
+                android:layout_marginRight="15dp"
+                android:layout_height="30dp"
+                android:background="#512DA8"
+                android:text="pre" />
+            <Button
+                android:id="@+id/loop"
                 android:layout_weight="1"
-                android:background="#00000000"
-                android:elevation="13dp"
-                android:src="@android:drawable/ic_media_pause" />
+                android:textColor="#ffffff"
+                android:background="#512DA8"
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:text="order" />
 
-            <ImageButton
+            <Button
                 android:id="@+id/next"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#00000000"
-                android:src="@android:drawable/ic_media_next" />
-
+                android:background="#512DA8"
+                android:layout_width="5dp"
+                android:textColor="#ffffff"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="25dp"
+                android:layout_height="30dp"
+                android:text="next" />
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
